# vphone

./: .gitignore  Cargo.toml  readme.md
python/src/: main.py
python/src/lib/: speak.py
src/: main.rs  vn_edict_license.txt  vnedict.txt  vnedict_lowercase.txt  vowels.rs
